--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>For Braeden, My Love <3</title>
 	<style>
 	img {border:3px solid white;}
-	h1 {font-family:Impact Light, Charcoal, sans-serif;
+	h1 {font-family:comic sans ms;
 		font-size:1000%;}
 	html {background: url(http://i.imgur.com/JuUPdtc.gif) no-repeat center center fixed; 
   -webkit-background-size: cover;
@@ -15,7 +15,7 @@
 </head>
 <body>
 	<div style= "text-align:center;">
-    		<h1 style="color:#D2D2D2;">Braeden is love, Braeden is life</h1>
+    		<h1 style="color:white;">Braeden is love, Braeden is life</h1>
        		<iframe src="https://www.youtube.com/embed/5xxQs34UMx4?ecver=2&autoplay=1" width="0" height="0" frameborder="0" </iframe>
 	</div>
 </body>
